--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "component-emitter": "npm:component-emitter@^1.2.0",
       "debug": "npm:debug@^2.2.0",
+      "dropzone": "github:enyo/dropzone@^4.3.0",
       "fetch": "github:github/fetch@^0.10.1",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "isarray": "npm:isarray@^1.0.0",
