--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.0",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "component-emitter": "npm:component-emitter@^1.2.0",
+      "css": "github:systemjs/plugin-css@^0.1.20",
       "debug": "npm:debug@^2.2.0",
       "dropzone": "github:enyo/dropzone@^4.3.0",
       "fetch": "github:github/fetch@^0.10.1",
@@ -81,7 +82,7 @@
       "mimetype": "npm:mimetype@^0.0.8",
       "socket.io-client": "npm:socket.io-client@^1.4.5",
       "socket.io-p2p": "npm:socket.io-p2p@^2.2.0",
-      "text": "github:systemjs/plugin-text@^0.0.3"
+      "text": "github:systemjs/plugin-text@^0.0.7"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
