--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.1.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.0",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.0",
+      "bulma": "npm:bulma@^0.0.16",
       "component-emitter": "npm:component-emitter@^1.2.0",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "debug": "npm:debug@^2.2.0",
