--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.0",
       "bulma": "npm:bulma@^0.0.16",
       "component-emitter": "npm:component-emitter@^1.2.0",
+      "crypto-js": "npm:crypto-js@^3.1.6",
       "css": "github:systemjs/plugin-css@^0.1.20",
       "debug": "npm:debug@^2.2.0",
       "dropzone": "github:enyo/dropzone@^4.3.0",
